# snoyman.com

./: .dockerignore  .gitattributes  .gitignore  .project-settings.yml  Dockerfile  README.md  _redirects  atom.xml  config.toml  dev.sh  index.html  main.hs  netlify.toml  package.yaml  posts.yaml  reveal.hamlet  robots.txt  sitemap.xml  snoymancom.cabal  stack.yaml
.ci/: cloudflare-build.sh
.github/workflows/: base.yml  build-snoycron.yml  dockerpublish.yml  run-snoycron.yml  runtime.yml  zola.yml
base/: index.html
base-build/: Dockerfile
base-run/: Dockerfile
blog/: index.html
config/: deploy.yaml  keter.yaml
content/: _index.md  base.md  home.yaml  posts.yaml  shekel.md  work.md
content/blog/: _index.md  appveyor-haskell-windows-ci.md  april-fools-canceled.md  babies-oss-maintenance.md  better-exception-messages.md  beware-of-readfile.md  bitcoin-vs-gold.md  bitwarden-encrypted-backup-tool.md  book-review-loserthink.md  boring-haskell-manifesto.md  breaking-changes-dependency-trees.md  building-packages-outside-snapshots.md  buying-bitcoin-or-selling-dollars.md  call-for-new-issue-triager.md  call-for-new-stackage-curator.md  carbs.md  conduitpocalypse.md  conflicting-module-names.md  deprecating-haskell-markdown-library.md  designing-apis-for-extensibility.md  drop-conduits-finalizers.md  dropped-packages-following-lts-10.md  effective-ways-help-from-maintainers.md  enough-with-backwards-compatibility.md  extra-benefit-of-open-sourcing.md  first-post.md  foldable-mapm-maybe-and-recursive-functions.md  follow-up-mapm.md  force-code-to-break.md  fp-completes-opinion.md  functors-applicatives-and-monads.md  future-proofing-test-suites.md  generalizing-type-signatures.md  guide-to-matrix-riot.md  gym-etiquette-test.md  hackage-security-stack.md  haskell-bad-parts-1.md  haskell-bad-parts-2.md  haskell-bad-parts-3.md  haskell-base-proposal-2.md  (+117 more)
content/galacticsilkroad/: _index.md  journey.md
content/posts/: book-review-loserthink.md  economic-argument-functional-programming.md  force-code-to-break.md  haskell-bad-parts-1.md  haskell-bad-parts-2.md  haskell-bad-parts-3.md  homeschool-on-powerpoint.md  live-coding-rust-reverse-proxy.md  no-mutable-parameters-in-rust.md  parents-guide-minecraft.md  rust-crash-course-01-kick-the-tires-solutions.md  rust-crash-course-01-kick-the-tires.md  rust-crash-course-02-basics-of-ownership.md  rust-crash-course-03-iterators-and-errors-solutions.md  rust-crash-course-04-crates-more-iterators-solutions.md  rust-crash-course-04-crates-more-iterators.md  rust-crash-course-05-rule-of-three.md  rust-crash-course-06-lifetimes-slices-solutions.md  rust-crash-course-09-tokio-0-2.md  securing-internet-communications-laymans-guide.md  stackage-for-rust.md  transparency.md
content/reveal/: _index.md  actuarial-thinking.md  async-exception-handling.md  conduit-yesod.md  deploying-haskell-services.md  economic-argument-functional-programming.md  first-app-wai-warp.md  fp-is-the-new-oop.md  functional-programming-for-the-long-haul.md  haskell-inside-out.md  haskell-success-program.md  intro-to-rust.md  lambdaconf-winter-2018-part-2.md  monad-transformer-state.md  second-app-yesod.md  what-makes-haskell-unique-2020.md  (+3 more)
kube/: rc.yaml  service.yaml
migrate/: Cargo.toml
migrate/src/: main.rs
posts/: haskell-foundation.md  new-book-begin-rust.md  rust-crash-course-02-basics-of-ownership-solutions.md  rust-crash-course-03-iterators-and-errors.md  rust-crash-course-05-rule-of-three-solutions.md  rust-crash-course-06-lifetimes-slices.md  rust-crash-course-07-async-futures-tokio.md  rust-crash-course-08-down-dirty-future.md  securing-internet-communications-laymans-guide.md  stackage-for-rust.md
reveal/: actuarial-thinking.md  async-exception-handling.md  conduit-yesod.md  deploying-haskell-services.md  economic-argument-functional-programming.md  first-app-wai-warp.md  fp-is-the-new-oop.md  functional-programming-for-the-long-haul.md  haskell-inside-out.md  haskell-success-program.md  index.html  intro-to-rust.md  lambdaconf-winter-2018-part-2.md  monad-transformer-state.md  second-app-yesod.md  what-makes-haskell-unique-2020.md  what-makes-haskell-unique.md  why-applied-haskell.md
shekel/: feed  index.html
site/: LICENSE  package.yaml  reveal.hamlet
snoycron/: Cargo.toml  Dockerfile
snoycron/src/: main.rs
src/: GhcInfo.hs  Shekel.hs  SnoymanCom.hs
static/: _redirects  browserconfig.xml  manifest.json
templates/: 404.html  blog-home.html  blog-page.html  blog.hamlet  blog.julius  blog.lucius  bodyend.hamlet  default-layout-wrapper.hamlet  default-layout.hamlet  galacticsilkroad-page.html  home.hamlet  home.html  index.html  macros.html  page.html  posts.hamlet  reveal-list.html  reveal.html  rss.xml  section.html  series.hamlet  shekel.html  sidebar.hamlet  stylesheets.hamlet  topnav.hamlet  torah-page.html  work.html
(+171 files in other folders)
