name:                snoymancom
version:             0.1.0.0
synopsis:            snoyman.com
homepage:            http://www.snoyman.com/
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

executable snoymancom
  main-is:             main.hs
  build-depends:       base
                     , yaml
                     , aeson
                     , markdown
                     , text
                     , shakespeare
                     , blaze-markup
                     , yesod-static
                     , classy-prelude-yesod
                     , vector
                     , yesod-gitrepo
                     , filepath
  default-language:    Haskell2010
