name:                snoymancom
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     SnoymanCom
  hs-source-dirs:      src
  build-depends:       base
                     , yaml
                     , aeson
                     , markdown
                     , text
                     , shakespeare
                     , blaze-markup
                     , yesod-static
                     , classy-prelude-yesod
                     , vector
                     , yesod-gitrepo
                     , filepath
                     , yesod-newsfeed
                     , containers
                     , directory
                     , async
  default-language:    Haskell2010

executable snoymancom
  main-is:             main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , snoymancom
  default-language:    Haskell2010
  ghc-options:         -threaded
