name:                snoymancom
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

flag library-only
     default: False
     description: Only build library
     manual: True

library
  exposed-modules:     SnoymanCom
  hs-source-dirs:      src
  build-depends:       base
                     , yaml
                     , aeson
                     , markdown
                     , text
                     , shakespeare
                     , blaze-markup
                     , yesod-static
                     , yesod-core >= 1.4.30
                     , classy-prelude-yesod
                     , vector
                     , yesod-gitrepo
                     , filepath
                     , yesod-newsfeed
                     , containers
                     , directory
                     , async
  default-language:    Haskell2010

executable snoymancom
  main-is:             main.hs
  hs-source-dirs:      app
  build-depends:       base
                     , snoymancom
  default-language:    Haskell2010
  ghc-options:         -threaded
  if flag(library-only)
    buildable:         False
