[package]
name = "migrate"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { features = ["derive"] }
serde_yaml = ""
toml = ""
chrono = { version = "0.4", features = ["serde"] }
anyhow = ""
