[package]
name = "snoycron"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
anyhow = "1.0.38"
serde = { version = "1.0.119", features = ["derive"] }
serde_yaml = "0.8.15"
serde_json = "1"
semver = "0.10"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.8"
