[package]
name = "snoycron"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "rustls-tls", "json"], default-features = false }
anyhow = "1.0.57"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
semver = "1.0.9"
chrono = { version = "0.4.19", features = ["serde"] }
once_cell = "1.12.0"
