[package]
name = "snoycron"
version = "0.1.0"
authors = ["Michael Snoyman <michael@snoyman.com>"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "rustls-tls", "json"], default-features = false }
anyhow = "1.0.60"
serde = { version = "1.0.142", features = ["derive"] }
serde_yaml = "0.9.4"
chrono = { version = "0.4.20", features = ["serde"] }
once_cell = "1.13.0"
